@@ -1048,7 +1048,7 @@
 			<option>&lt;path to image&gt; (-p x,y) (-s WxH)</option>
 		</term>
 		<listitem>
-			Renders an image from the path specified using IMLIB2.  Takes 2 optional arguments, one being a position, the other an size.  Changing the x,y position will move the position of the image, and changing the WxH will scale the image.  Example: ${image /home/brenden/cheeseburger.jpg -p 20,20 -s 200x200} will render 'cheeseburger.jpg' at (20,20) scaled to 200x200 pixels.
+			Renders an image from the path specified using IMLIB2.  Takes 2 optional arguments, one being a position, the other an size.  Changing the x,y position will move the position of the image, and changing the WxH will scale the image.  Example: ${image /home/brenden/cheeseburger.jpg -p 20,20 -s 200x200} will render 'cheeseburger.jpg' at (20,20) scaled to 200x200 pixels.  Conky does not make any attempt to adjust the position (or any other formatting) of images, they are just rendered as per the arguments passed.  The only reason $image is part of the TEXT section, is to allow for runtime modifications, through $execp $lua_parse, $lua_read_parse, or some other method.
 			<para></para></listitem>
 	</varlistentry>
 
